# goit-pythonweb-hw-012

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
docs/source/: conf.py
src/: schemas.py
src/api/: auth.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
src/services/templates/: reset_password.html
tests/: conftest.py  test_contact_repository_unit.py  test_contact_service_unit.py  test_helpers.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_user_repository_unit.py
